<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_oscuro"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:src="@drawable/logo_app_blanco" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:boxStrokeWidth="0dp"
                app:helperTextEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText_SignIn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/rounded_corners_shape"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/gris_oscuro"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:textColor="@color/white" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:boxStrokeWidth="0dp"
                app:endIconMode="password_toggle"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText_SignIn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/rounded_corners_shape"
                    android:drawableStart="@drawable/ic_padlock"
                    android:drawablePadding="20dp"
                    android:drawableTint="@color/gris_oscuro"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButtonSignIn"
                style="@style/blueDefaultButton"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:text="@string/login"
                app:cornerRadius="30dp"
                app:iconGravity="textEnd"
                app:iconTint="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgotPasswordButton_SignIn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/azul_turquesa" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSignUpText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/signUpTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/already_have_an_account"
                android:textColor="@color/gris_oscuro"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/signUpTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/azul_turquesa" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>