<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_oscuro"
    tools:context=".SignInActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/arrowBackImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back"
            app:tint="@color/azul_turquesa"/>

        <TextView
            android:id="@+id/createAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arrowBackImageView" />

        <TextView
            android:id="@+id/createAccountSubTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/please_fill_the_input_below"
            android:textColor="@color/gris_oscuro"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccountTextView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeColor="#0000ffff"
            app:boxStrokeErrorColor="@color/error"
            app:boxStrokeWidth="0dp"
            app:helperText="¡Be creative!"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccountSubTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_login_edittext"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="20dp"
                android:drawableTint="@color/gris_oscuro"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeColor="#0000ffff"
            app:boxStrokeWidth="0dp"
            app:helperText=""
            app:helperTextEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameInputLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_login_edittext"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="20dp"
                android:drawableTint="@color/gris_oscuro"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeColor="#0000ffff"
            app:boxStrokeWidth="0dp"
            app:helperText="You will need to verify your account"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneInputLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_login_edittext"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="20dp"
                android:drawableTint="@color/gris_oscuro"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwd1InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeColor="#0000ffff"
            app:boxStrokeWidth="0dp"
            app:endIconMode="password_toggle"
            app:helperText=""
            app:helperTextEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwd1EditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_login_edittext"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="20dp"
                android:drawableTint="@color/gris_oscuro"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwd2InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeColor="#0000ffff"
            app:boxStrokeWidth="0dp"
            app:endIconMode="password_toggle"
            app:helperText=""
            app:helperTextEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwd1InputLayout">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwd2EditText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_login_edittext"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="20dp"
                android:drawableTint="@color/gris_oscuro"
                android:ems="10"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textColor="@color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButton"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginBottom="24dp"
            android:text="@string/next"
            style="@style/blueDefaultButton"
            app:icon="@drawable/ic_forward_password"
            app:iconGravity="textEnd"
            app:iconTint="@color/black"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutSignUpText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayoutSignUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/signUpTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/already_have_an_account"
                android:textColor="@color/gris_oscuro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/signInTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/sign_in"
                android:textColor="@color/azul_turquesa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/signUpTextInfo" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
