<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_oscuro"
    tools:context=".ui.pr.IntroPrActivity">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/insert_new_pr"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/exerciseInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:boxStrokeWidth="0dp"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/exerciseEditText_SignIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rounded_corners_shape"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="20dp"
            android:drawableTint="@color/gris_oscuro"
            android:ems="10"
            android:hint="@string/exercise"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:boxStrokeWidth="0dp"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseInputLayout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightEditText_SignIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rounded_corners_shape"
            android:drawableStart="@drawable/ic_dumbbell"
            android:drawablePadding="20dp"
            android:drawableTint="@color/gris_oscuro"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="243dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:boxStrokeWidth="0dp"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightInputLayout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repEditText_SignIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rounded_corners_shape"
            android:drawableStart="@drawable/ic_direct_message"
            android:drawablePadding="20dp"
            android:drawableTint="@color/gris_oscuro"
            android:ems="10"
            android:hint="@string/reps"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="243dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:boxStrokeWidth="0dp"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repInputLayout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateEditText_SignIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rounded_corners_shape"
            android:drawableStart="@drawable/ic_baseline_calendar_month_24"
            android:drawablePadding="20dp"
            android:drawableTint="@color/gris_oscuro"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="243dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendButtonPR"
        style="@style/blueDefaultButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        app:cornerRadius="30dp"
        app:iconGravity="textEnd"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/backImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/titleTextView"
        app:layout_constraintEnd_toStartOf="@+id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleTextView"
        app:srcCompat="@drawable/ic_arrow_back" />


</androidx.constraintlayout.widget.ConstraintLayout>